# thesis

./: .gitignore  .gitmodules
code/cliff_walking/: Untitled.ipynb
code/cliff_walking/.virtual_documents/: Untitled.ipynb
code/cliff_walking/cliff_walking/: environment.py  ql_agent.py  sarsa_agent.py
code/example_projects/: requirements.txt
code/example_projects/line_world/: k_armed_bandit.py
code/f16/: CMakeLists.txt
code/f16/cmake/: FindCython.cmake
code/f16/f16/: setup.py
code/f16/f16/cpp/: CMakeLists.txt  agent.h  cpp_init.pxd  enviroment.cpp  enviroment.h  grid_tile_coding.h  linalg.cpp  linalg.h
code/f16/f16/f16/: __init__.py  __main__.py  copy_binary.py
code/f16/libf16/: Cargo.toml
code/f16/libf16/src/: lib.rs
code/f16/libpyf16/: Cargo.toml
code/f16/libpyf16/src/: lib.rs
code/f16/model_generator/: LIN_F16Block_trim.slxc  clist.m  create_state_space_model.m  states.txt
code/f16/model_generator/F16Sim/: LIN_F16Block.mdl  nlplant.mexa64
code/f16/model_generator/slprj/sim/varcache/LIN_F16Block/: checksumOfCache.mat
code/f16/model_generator/slprj/sim/varcache/LIN_F16Block/tmwinternal/: simulink_cache.xml
code/f16/model_generator/slprj/sim/varcache/LIN_F16Block_trim/: checksumOfCache.mat
code/f16/model_generator/slprj/sim/varcache/LIN_F16Block_trim/tmwinternal/: simulink_cache.xml
code/f16/test/: CMakeLists.txt  match_pointer_array.h  test_grid_tile_coding.cpp
code/f16_linear/f16/cpp/: CMakeLists.txt  agent.h  cpp_init.pxd  cpp_init.pyx  environment.cpp  environment.h  rand.h
code/f16_linear/model_generator/: LIN_F16Block.mdl  LIN_F16Block.slxc  find_f16_dynamics_lofi.m  trim_F16_5.m  untitled.slx
code/f16_linear/test/: test_environment.cpp  test_factorial.cpp  test_main.cpp
code/line_world/line_world/: cart_pole_example.py  k_armed_bandit.py  line_world.py
code/pole/: CMakeLists.txt  pid_agent.ipynb  poly_rl_agent.ipynb  table_rl_agent.ipynb
code/pole/pole/: __init__.py  filter.py  generate_polynomial.py  run_pid_agent.py  run_poly_rl_agent.py  run_table_rl_agent.py  run_tile_coding_rl_agent.py
code/pole/pole/cpp/: CMakeLists.txt  agent.h  cpp_init.pxd  cpp_init.pyi  cpp_init.pyx  generate_stubs.py  grid_tile_coding.cpp  grid_tile_coding.h  main.cpp  pid_agent.cpp  pid_agent.h  pole.cpp  pole.h  poly_rl_agent.cpp  poly_rl_agent.h  rand.h  season.cpp  season.h  table_rl_agent.cpp  table_rl_agent.h  tile_coding_agent.cpp  tile_coding_agent.h
code/pole/spike/: CMakeLists.txt  conditional_template.cpp  eigen_exp.cpp  record.py  table_prelookup.py
code/pole_new/: CMakeLists.txt
code/pole_new/notebooks/: Untitled1.ipynb  pid_agent.ipynb  table_agent.ipynb  tile_coding.ipynb
code/pole_new/pole/cpp/: CMakeLists.txt  __init__.pxd  __init__.pyx  agent_base.h  environment.h  grid_tile_coding.h  grid_tile_coding_agent.h  main.cpp  pid_agent.h  rand.h  spancpy.h  table_3d.h  table_agent.h  types.h
code/pypole/: setup.py
code/pypole/notebooks/: pid_agent.ipynb
code/pypole/pypole/: pid_agent.py  pole.py
code/quad_nav/: Cargo.toml
code/quad_nav/python/: environment.yml  plotting.py  test.tex
code/quad_nav/src/: agent.rs  environment.rs  experiment_1.rs  main.rs  point.rs
code/toy_multiphase/: .gitignore  README.md  pyproject.toml  test_info_dict_fix.py  test_shared_critic_training.py
code/toy_multiphase/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
code/toy_multiphase/docs/: milestone_a_tasks.md
code/toy_multiphase/src/toy_mp/: __init__.py
code/toy_multiphase/src/toy_mp/envs/: __init__.py
code/toy_multiphase/src/toy_mp/envs/conveyor_portal/: __init__.py  env.py  map_spec.py  tiles.py  validators.py
code/toy_multiphase/src/toy_mp/experiments/: plot_results.py  run_experiments.py
code/toy_multiphase/src/toy_mp/rllib/: callbacks.py  multiagent_wrapper.py  shared_critic_policy.py  train_ppo_multiagent.bak.py  trainers.py
code/toy_multiphase/src/toy_mp/rllib/models/: shared_critic_model_tf.py
code/toy_multiphase/tests/: test_automatic_sync.py  test_multiagent_api.py  test_phase_actor_shared_critic.py  test_ray_shared_critic.py  test_rllib_wrapper.py  test_shared_critic.py  test_simple_multiagent.py  test_simple_ray_shared.py  test_simple_sync.py  test_smoke.py  test_trainer_config.py
code/trajectory_optimization_1/: .Dockerfile  .dockerignore  .gitignore  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  environment.yml  requirements.txt  run_jupyter.sh  setup.py
code/trajectory_optimization_2/: environment.yml  pyproject.toml  requirements.txt
code/trajectory_optimization_2/traj2/: constants.py  logger.py
code/trajectory_optimization_2/traj2/environments/launcher_v1/: __init__.py  launcher_v1.py  simulation.py
code/trajectory_optimization_2/work/third_phase/: 0_test_environment.ipynb  case_runner.py  env_config.py  environment.py  plotting.py  pso_optimizer.py  sufcnet.py
reports/preliminary_thesis/: glossary.tex  makeglossary.sh  plan.md  report.sdn  report.sld  report.slg  report.tdn  report.tex  report.tld  report.tlg  title.tex  tudelft-report.cls
reports/preliminary_thesis/chapters/: 0_introduction.tex  1_introduction.tex  1_rl.tex  2_0_orbital_ascent_trajectory_optimization.tex  2_1_analytical_solution.tex  2_1_trajectory_optimization.tex  2_2_literature_review.tex  2_2_trajectory_optimization.tex  2_3_analytical_solution.tex  2_3_exisiting_methods.tex  2_tabular_methods.tex  3_0_rl.tex  3_1_literature_review.tex  3_1_tabular_methods.tex  3_2_approximate_solutions.tex  3_2_rl_basics.tex  3_3_policy_gradient_methods.tex  3_3_tabular_methods.tex  3_4_literature_review.tex  3_5_policy_gradient_methods.tex  3_6_examples.tex  3_approximate_solutions.tex  4_ppf.tex  4_state_of_the_art.tex  5_conclusion.tex  5_pot.tex  6_pot.tex  a_full_analytical_solution.tex
reports/preliminary_thesis/figures/: 10_armed_bandit.tex  ann.tex  flight_trajectory_analytical.tex  (+16 more)
reports/progress_report/: .gitignore  progressreport_template_2012_6_6.tcp  progressreport_template_2012_6_6.tex
reports/project_plan/: AE4010-template.cls  README.txt  bibliography.bib  main.tex
(+58 files in other folders)
