[package]
name = "pyf16"
version = "0.1.0"
authors = ["adewindt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="pyf16"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

[dependencies]
f16 = { path="../libf16" }
